# remounter

./: Cargo.toml  README.md  install.sh  uninstall.sh
Remounter.app/Contents/: Info.plist
Remounter.app/Contents/MacOS/: remounter
src/: main.rs  remounter.rs
