[package]
name = "remounter"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
signal-hook = "0.3.18"
time = { version = "0.3.44", features = ["macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "json", "local-time", "time"] }
