[package]
name = "remounter"
version = "0.6.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
signal-hook = "0.4.4"
time = { version = "0.3.47", features = ["macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "json", "local-time", "time"] }
